RESOLVED FIXED130594
AX: Replace DEPRECATED_DEFINE_STATIC_LOCAL by static NeverDestroyed
https://bugs.webkit.org/show_bug.cgi?id=130594
Summary AX: Replace DEPRECATED_DEFINE_STATIC_LOCAL by static NeverDestroyed
Krzysztof Czech
Reported 2014-03-21 07:45:37 PDT
Replace DEPRECATED_DEFINE_STATIC_LOCAL by static NeverDestroyed.
Attachments
patch (16.82 KB, patch)
2014-03-21 08:09 PDT, Krzysztof Czech
no flags
Radar WebKit Bug Importer
Comment 1 2014-03-21 07:47:09 PDT
Krzysztof Czech
Comment 2 2014-03-21 08:09:47 PDT
WebKit Commit Bot
Comment 3 2014-03-21 10:08:41 PDT
Comment on attachment 227435 [details] patch Clearing flags on attachment: 227435 Committed r166069: <http://trac.webkit.org/changeset/166069>
WebKit Commit Bot
Comment 4 2014-03-21 10:08:48 PDT
All reviewed patches have been landed. Closing bug.
Sergio Villar Senin
Comment 5 2014-03-21 10:11:25 PDT
This is a duplicate of 130256. Please see also concerns raised by andersca in https://bugs.webkit.org/show_bug.cgi?id=130256#c3
Note You need to log in before you can comment on or make changes to this bug.