AX: Replace DEPRECATED_DEFINE_STATIC_LOCAL by static NeverDestroyed https://bugs.webkit.org/show_bug.cgi?id=130594

Reviewed by Chris Fleizach.

Use static NeverDestroyed<T> in new code.

* accessibility/AccessibilityMediaControls.cpp:
(WebCore::AccessibilityMediaControl::controlTypeName):
(WebCore::AccessibilityMediaControl::title):
(WebCore::AccessibilityMediaControlsContainer::elementTypeName):
(WebCore::AccessibilityMediaTimeline::helpText):
(WebCore::AccessibilityMediaTimeDisplay::accessibilityDescription):
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::actionVerb):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::inheritsPresentationalRole):
(WebCore::AccessibilityRenderObject::ariaLiveRegionStatus):
(WebCore::AccessibilityRenderObject::ariaLiveRegionRelevant):
(WebCore::AccessibilityRenderObject::actionVerb):
* accessibility/atk/AXObjectCacheAtk.cpp:
(WebCore::notifyChildrenSelectionChange):


Canonical link: https://commits.webkit.org/148610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166069 268f45cc-cd09-0410-ab3c-d52691b4dbfc